--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ button {
 	margin-left: auto;
 }
 /* Header */
-.header {
+.header-portfolio {
 	border-bottom: 1px solid #ececec;
 }
 .header-container {
@@ -152,6 +152,19 @@ button {
 }
 .current-page {
 	color: var(--accent-color);
+	position: relative;
+}
+.current-page::after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 4px;
+	border-radius: 2px;
+	position: absolute;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	background-color: var(--accent-color);
 }
 /* Hero */
 .hero {
