--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,9 @@ svg {
 button {
 	cursor: pointer;
 }
+a {
+	text-decoration: none;
+}
 /* Контейнер */
 .container {
 	width: 1200px;
@@ -98,7 +101,6 @@ button {
 	font-weight: 700;
 	font-size: 26px;
 	line-height: 1.19;
-	text-decoration: none;
 	color: var(--title-text-color);
 }
 .logo-color {
@@ -118,8 +120,12 @@ button {
 	font-weight: 500;
 	line-height: 1.14;
 	letter-spacing: 0.02em;
-	text-decoration: none;
 	color: var(--title-text-color);
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
 }
 .nav-link:hover,
 .nav-link:focus {
@@ -136,11 +142,15 @@ button {
 .contacts-link {
 	display: flex;
 	align-items: center;
-	text-decoration: none;
 	font-weight: 500;
 	line-height: 1.14;
 	letter-spacing: 0.02em;
 	color: var(--primary-text-color);
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
 }
 .contacts-link:hover,
 .contacts-link:focus {
@@ -322,6 +332,11 @@ button {
 	height: 44px;
 	border-radius: 50%;
 	color: var(--primary-icon-color);
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
 }
 .links-list-item:hover,
 .links-list-item:focus {
@@ -375,6 +390,11 @@ button {
 	border: 1px solid currentColor;
 	border-radius: 4px;
 	color: var(--primary-icon-color);
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
 }
 .client-list-links:hover,
 .client-list-links:focus {
@@ -416,8 +436,12 @@ button {
 .footer-contacts-link {
 	font-weight: 400;
 	line-height: 1.71;
-	text-decoration: none;
 	color: var(--footer-secondary-text-color);
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
 }
 .footer-contacts-link:hover,
 .footer-contacts-link:focus {
@@ -446,7 +470,11 @@ button {
 	border-radius: 50%;
 	background-color: var(--footer-secondary-background-color);
 	color: var(--primary-white-color);
-	/* margin-right: 10px; */
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
 }
 .footer-links:hover,
 .footer-links:focus {
@@ -512,6 +540,11 @@ button {
 	letter-spacing: 0.03em;
 	color: var(--title-text-color);
 	background-color: #f5f4fa;
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
 }
 .portfolio-button:hover,
 .portfolio-button:focus {
@@ -526,6 +559,11 @@ button {
 .portfolio-card {
 	width: calc((100% - 30px * 2) / 3);
 	margin-bottom: 30px;
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
 }
 .portfolio-card:nth-child(3n + 2) {
 	margin-right: 30px;
@@ -534,6 +572,40 @@ button {
 .portfolio-card:hover,
 .portfolio-card:focus {
 	box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+.portfolio-card:hover .project-desc,
+.portfolio-card:focus .project-desc {
+	opacity: 1;
+	transform: translateY(0);
+}
+.project-img-container {
+	position: relative;
+	overflow: hidden;
+}
+.project-desc {
+	width: 100%;
+	padding-top: 63px;
+	padding-bottom: 63px;
+	padding-right: 24px;
+	padding-left: 24px;
+
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	transform: translateY(100%);
+
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 1.56;
+	color: var(--primary-white-color);
+	background-color: rgba(33, 150, 243, 0.9);
+	opacity: 0;
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
 }
 .project-name-container {
 	padding-top: 20px;
@@ -557,12 +629,5 @@ button {
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 1.87;
-}
-.project-desc {
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 1.56;
-	color: var(--primary-white-color);
-	/* временный фон */
-	background-color: var(--accent-color);
+	color: var(--primary-text-color);
 }
