--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,16 @@ a {
 	letter-spacing: 0.06em;
 	color: var(--primary-white-color);
 	background-color: var(--accent-color);
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
+}
+.hero-button:hover,
+.hero-button:focus {
+	color: var(--accent-color);
+	background-color: var(--primary-white-color);
 }
 /* Main */
 .section-title {
@@ -503,15 +513,29 @@ a {
 	letter-spacing: 0.06em;
 	color: var(--primary-white-color);
 	background-color: var(--accent-color);
+
+	transition-property: all;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0;
 }
-.footer-button::after {
+.footer-button-icon {
+	margin-left: 10px;
+	fill: currentColor;
+}
+.footer-button:hover,
+.fotter-button:focus {
+	color: var(--accent-color);
+	background-color: var(--primary-white-color);
+}
+/* .footer-button::after {
 	content: "";
 	width: 24px;
 	height: 24px;
 	margin-left: 10px;
 	background-image: url(../images/icon-send.svg);
 	background-size: contain;
-}
+} */
 /* Портфолио */
 .portfolio {
 	width: 1200px;
